# CRM-snab

./: .env.example  .gitattributes  .gitignore  Caddyfile  docker-compose.https.yml  docker-compose.yml
Concept design/: SPECIFICATION.md  index.html  zakupki-crm-v5.html  zakupki-crm.css  zakupki-crm.js
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: audit.py  backup.py  calculations.py  config.py  db.py  dependencies.py  export.py  main.py  models.py  permissions.py  security.py  seed.py
backend/app/routers/: auth.py  comments.py  dashboard.py  dict.py  history.py  payments.py  procurement.py  reports.py  requests.py  search.py  support.py  users.py
backend/app/schemas/: auth.py  comments.py  dashboard.py  deliveries.py  history.py  payments.py  procedures.py  reports.py  requests.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 20260621_1942_37de97fc8022_initial_schema.py  20260622_1200_a1b2c3d4e5f6_add_num_to_requested_position.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_backup.py  test_calculations.py  test_comments.py  test_dashboard.py  test_dict.py  test_history.py  test_payments.py  test_permissions.py  test_procurement.py  test_reports.py  test_requests.py  test_schema.py  test_search.py  test_security.py  test_seed.py  test_support.py  test_users.py
docs/: 01-domain-model.md  02-statuses.md  03-roles-permissions.md  04-auth.md  10-page-komplektaciya.md  11-page-v-zakupke.md  12-page-v-soprovozhdenii.md  13-page-oplaty.md  14-page-dashboard.md  30-db-schema.md  (+9 more)
(+98 files in other folders)
